@@ -30,6 +30,14 @@ push_context (enum context c)
       stack = realloc (stack, (space += 5) * sizeof (enum context));
     }
 
+  /*
+  debug (">>>>>>>>>>>>>>>>>.PUSHING STACK AT %d  -- %s", top,
+         c == ct_preformatted ? "preformatted"
+         : c == ct_line ? "line"
+         : c == ct_def ? "def"
+         : c == ct_menu ? "menu"
+         : "");
+  */
   stack[top++] = c;
 }
 
@@ -39,6 +47,7 @@ pop_context ()
   if (top == 0)
     abort ();
 
+  /*  debug (">>>>>>>>>>>>>POPPING STACK AT %d", top - 1);  */
   return stack[--top];
 }
 
